Added function for approximate sampling of sample-based posterior in 1d / updates to 1d example for paper.

--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -781,7 +781,7 @@ defined by the deterministic joint marginal approximation of the acceptance prob
 one might also consider setting 
 $\llikSampDist_{\Par, \propPar} 
 \Def \Gaussian\left(\emMean[\Ndesign]{\llik}(\parMat), \diag\left\{\emKer[\Ndesign]{\llik}(\Par), \emKer[\Ndesign]{\llik}(\propPar) \right\}\right)$; 
-that is, ignore the GP covariance structure. We refer to the resulting algorithm
+that is, ignore the GP covariance structure. We refer to the resulting algorithm as
 \textit{Independent Monte Carlo Within Metropolis-Hastings} ($\mcwmhIndLabel$) and consider this choice as a basis for 
 comparison to assess the influence of incorporating the GP covariance in the approximate posterior [\todo]. 
 An algorithm similar to $\mcwmhIndLabel$ is utilized to calibrate expensive ecosystem models 
